--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,18 +6,18 @@
     "configurations": [
         {
             "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "Traffic-Citation-and-Reporting-System_bf625853",
+            "vmArgs": "--module-path \"C:\\Program Files\\Java\\javafx-sdk-20\\lib\" --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "Citation",
             "request": "launch",
             "mainClass": "Citation",
             "projectName": "Traffic-Citation-and-Reporting-System_bf625853"
-        },
-        {
-            "type": "java",
-            "name": "Main",
-            "request": "launch",
-            "mainClass": "Main",
-            "projectName": "Traffic-Citation-and-Reporting-System_bf625853",
-            "vmArgs": "--module-path \"C:\\Program Files\\Java\\javafx-sdk-20\\lib\" --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
