--- a/n-tcrs/src/main/resources/database.properties
+++ b/n-tcrs/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 # MySQL Database Properties
-db.driver=com.mysql.jdbc.Driver
+db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/project
 db.user=root
 db.password=test
